--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
-  "python.pythonPath": "venv\\Scripts\\python.exe",
-  "python.formatting.provider": "autopep8",
+  "python.pythonPath": "c:\\Users\\loite\\Documents\\Projects\\places-backend\\venv\\Scripts\\python.exe",
+  "python.formatting.provider": "black",
   "python.linting.pylintArgs": [
     "--load-plugins",
     "pylint-flask"
